<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/auto_id_request_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/tool_bar_title_text_size"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="19dp" />

    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_between_buttons" />

            <EditText
                android:id="@+id/auto_year_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_input_height_standard"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/auto_year_hint"
                android:inputType="phone"
                android:maxLength="4"
                android:maxLines="1"
                android:paddingStart="@dimen/padding_start_input"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                android:textSize="@dimen/hint_text_size_dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="598dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_between_buttons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="107dp" />

            <EditText
                android:id="@+id/auto_make_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_input_height_standard"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/auto_make_hint"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="@dimen/padding_start_input"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                android:textSize="@dimen/hint_text_size_dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteX="-191dp"
                tools:layout_editor_absoluteY="76dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_between_buttons" />

            <EditText
                android:id="@+id/auto_model_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_input_height_standard"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/auto_model_hint"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="@dimen/padding_start_input"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                android:textSize="@dimen/hint_text_size_dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteX="-191dp"
                tools:layout_editor_absoluteY="76dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_between_buttons" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_input_height_standard"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/auto_vin_input"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_input_height_standard"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:hint="@string/auto_vin_hint"
                    android:inputType="text"
                    android:maxLength="17"
                    android:maxLines="1"
                    android:paddingStart="@dimen/padding_start_input"
                    android:selectAllOnFocus="false"
                    android:singleLine="true"
                    android:textSize="@dimen/hint_text_size_dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteX="-191dp"
                    tools:layout_editor_absoluteY="76dp" />

                <ImageButton
                    android:id="@+id/vin_camera_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:padding="30dp"
                    android:src="@drawable/ic_camera_white" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_between_buttons" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="165dp"
                tools:layout_editor_absoluteY="376dp">


                <RadioButton
                    android:id="@+id/liability_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:buttonTint="@android:color/white"
                    android:text="@string/liability_radio_button"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/radio_button_text_size_dp" />

                <RadioButton
                    android:id="@+id/full_coverage_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:buttonTint="@android:color/white"
                    android:text="@string/full_coverage_radio_button"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/radio_button_text_size_dp" />


            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@android:color/white" />

            <RadioGroup
                android:id="@+id/add_delete_radio_button_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="414dp">

                <RadioButton
                    android:id="@+id/add_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:buttonTint="@android:color/white"
                    android:onClick="checkBoxVisible"
                    android:text="@string/add_radio_button"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/radio_button_text_size_dp" />

                <RadioButton
                    android:id="@+id/delete_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:buttonTint="@android:color/white"
                    android:onClick="checkBoxInvisible"
                    android:text="@string/delete_radio_button"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/radio_button_text_size_dp" />

            </RadioGroup>

            <CheckBox
                android:id="@+id/ID_card_check_box"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:buttonTint="@android:color/white"
                android:text="@string/ID_card_check_box_text"
                android:textColor="@android:color/white"
                android:textSize="@dimen/radio_button_text_size_dp" />

            <Button
                android:id="@+id/auto_ID_submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/submitButton"
                android:onClick="sendAutoIDRequestEmail"
                android:text="@string/submit_button_text"
                android:textColor="@android:color/white"
                android:textSize="@dimen/submit_button_text_size_dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_between_buttons" />


        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>