<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/setup_main_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/setup_title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setup_main_title_text">

        <EditText
            android:id="@+id/setup_insured_company_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height_standard"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/insured_company_name_hint"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/padding_start_input"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="-191dp"
            tools:layout_editor_absoluteY="76dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_between_buttons" />

        <EditText
            android:id="@+id/setup_insured_contact_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height_standard"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/insured_contact_name_hint"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/padding_start_input"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="-191dp"
            tools:layout_editor_absoluteY="76dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_between_buttons" />

        <EditText
            android:id="@+id/setup_insured_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height_standard"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/insured_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="@dimen/padding_start_input"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="-191dp"
            tools:layout_editor_absoluteY="76dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_between_buttons" />

        <Button
            android:id="@+id/setup_save_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height_standard"
            android:background="@color/submitButton"
            android:onClick="saveOnButtonClick"
            android:text="@string/save_button_text"
            android:textColor="@android:color/white"
            android:textSize="24sp" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>